{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 80,
  "lineage": "9f15bd0c-89b6-dee6-c2d5-1aa7e86bf171",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d8796a2b0f8d29c",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-07a6ef670d4a55f9f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a6ef670d4a55f9f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eng99",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01a23181eea42004d",
            "private_dns": "ip-10-0-7-157.eu-west-1.compute.internal",
            "private_ip": "10.0.7.157",
            "public_ip": "54.73.147.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0746e6ce99cb915ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029a86ee8237a8a91",
            "tags": {
              "Name": "eng99_raj_terraform_app"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03deda1d6e994d6b2"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.publicsubnet",
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d8796a2b0f8d29c",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0b98db7f55d46898d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b98db7f55d46898d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eng99",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-075dca93f52ff7e4c",
            "private_dns": "ip-10-0-7-128.eu-west-1.compute.internal",
            "private_ip": "10.0.7.128",
            "public_ip": "52.214.225.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010239c5bd1d86d06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029a86ee8237a8a91",
            "tags": {
              "Name": "eng99_raj_terraform_db_instance"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_db_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ec04d520c4a5b0f"
            ]
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0858a12ff0ba2134d",
            "id": "igw-0858a12ff0ba2134d",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng99_raj_terraform_IG"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_IG"
            },
            "vpc_id": "vpc-0687285ba62100a0c"
          },
          "dependencies": [
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0eb3080c9d7fa0fb8",
            "id": "rtb-0eb3080c9d7fa0fb8",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0858a12ff0ba2134d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng99_raj_terraform_private_RT"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0687285ba62100a0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0703f1300e5deaf54",
            "id": "rtb-0703f1300e5deaf54",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0858a12ff0ba2134d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng99_raj_terraform_RT"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0687285ba62100a0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05af3d6be2820009a",
            "route_table_id": "rtb-0eb3080c9d7fa0fb8",
            "subnet_id": "subnet-0195a37270690919d"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnet",
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0760e8e41fba8b21b",
            "route_table_id": "rtb-0703f1300e5deaf54",
            "subnet_id": "subnet-029a86ee8237a8a91"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnet",
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-03deda1d6e994d6b2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03deda1d6e994d6b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "access the app from anywhere world",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from world",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eng99_raj_terraform_app_SG",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0687285ba62100a0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-06ec04d520c4a5b0f",
            "description": "db sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ec04d520c4a5b0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open port 27017",
                "from_port": 27017,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.0.7.0/24"
                ],
                "description": "port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eng99_raj_terraform_db_sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eng99_raj_terraform_dbsg"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_dbsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0687285ba62100a0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0195a37270690919d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0195a37270690919d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eng99_raj_terraform_privateSN"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_privateSN"
            },
            "vpc_id": "vpc-0687285ba62100a0c"
          },
          "dependencies": [
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-029a86ee8237a8a91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029a86ee8237a8a91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eng99_raj_terraform_publicSN"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_publicSN"
            },
            "vpc_id": "vpc-0687285ba62100a0c"
          },
          "dependencies": [
            "aws_vpc.eng99_raj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eng99_raj_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0687285ba62100a0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0739d30829b5418b2",
            "default_route_table_id": "rtb-0af70862893412689",
            "default_security_group_id": "sg-081c0a50ab8d4cec3",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0687285ba62100a0c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0af70862893412689",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng99_raj_terraform_vpc"
            },
            "tags_all": {
              "Name": "eng99_raj_terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}